<resources>
    <string name="app_name">DnD Toolkit</string>
    <string-array name="diceSpinnerElements">
        <item>Select Type</item>
        <item>D4</item>
        <item>D6</item>
        <item>D8</item>
        <item>D10</item>
        <item>D12</item>
        <item>D20</item>

    </string-array>
    <string name="roll">Roll</string>
    <string name="shake_switch">Shake to Roll </string>
    <string name="diceNum">Number of Dice </string>
    <string name="to_settings">To Settings</string>
    <string name="to_characters">To Characters</string>
    <string name="to_character_creation">Create Character</string>
    <string name="to_spell_book">To Spell Book</string>
    <string name="title">DnD Tool~Kit</string>
    <string name="settings">Settings</string>
    <string name="delete_all">Delete All Characters</string>
    <string name="sync">Sync With Drive</string>
    <string name="camera_access">Allow Camera Access</string>
    <string name="server_client_id">510044197339-8dmmoh310kr5u7i6lj9coepije0q4bq6.apps.googleusercontent.com</string>
</resources>
