<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#263238"
    android:orientation="vertical"
    android:paddingLeft="100dp"
    android:paddingTop="100dp"
    android:paddingRight="100dp"
    android:paddingBottom="100dp"
    tools:context=".Spelltable">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        app:srcCompat="@android:drawable/ic_menu_manage" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:text="@string/settings"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:text="@string/sync"
            android:textAlignment="viewStart"
            android:textColor="#ffffff"
            android:textSize="14sp" />

        <ImageButton
            android:id="@+id/sync"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="settingsOnClick"
            app:srcCompat="@drawable/googleg_standard_color_18" />

    </LinearLayout>

    <Button
        android:id="@+id/deleteAll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimaryDark"
        android:onClick="settingsOnClick"
        android:text="@string/delete_all"
        android:textSize="14sp"
        android:textStyle="bold" />
</LinearLayout>