<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DiceActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/diceSpinner"
            android:layout_margin="20dp">
        </Spinner>

        <LinearLayout
            android:layout_margin="20dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1.0"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/diceNum"
                android:layout_marginHorizontal="5dp"/>
            <SeekBar
                android:layout_weight=".75"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:progress="1"
                android:max="6"
                android:min="1"
                android:id="@+id/numOfDice"
                android:layout_gravity="center_horizontal" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/num"
                android:text="#"
                android:layout_marginHorizontal="5dp"/>

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/roll"
            android:id="@+id/rollButton"
            android:layout_margin="20dp"
            android:layout_gravity="center_horizontal"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shake_switch"
                android:layout_gravity="center"
                />

            <Switch
                android:id="@+id/accelerometerSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/resultLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">
        </LinearLayout>

    </LinearLayout>



</android.support.constraint.ConstraintLayout>